force-app/main/default/objects/Expo_Meeting_Booking_Info__c/Expo_Meeting_Booking_Info__c.object-meta.xml
<CustomObject>
    <label>Expo Meeting Room</label>
    <nameField>
        <label>Meeting Room NameCN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expo Meeting Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>