force-app/main/default/objects/Expo_Meeting_Booking_Info__c/fields/access__c.field-meta.xml
<CustomField>
    <fullName>access__c</fullName>
    <description>权限等级 默认0 越大所需权限越高</description>
    <label>access</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>