force-app/main/default/objects/Expo_Meeting_Booking_Info__c/fields/capacity__c.field-meta.xml
<CustomField>
    <fullName>capacity__c</fullName>
    <label>capacity</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>