force-app/main/default/objects/Expo_Meeting_Booking_Info__c/fields/computer__c.field-meta.xml
<CustomField>
    <fullName>computer__c</fullName>
    <label>computer</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>