force-app/main/default/objects/Expo_Meeting_Booking_Info__c/fields/day_end__c.field-meta.xml
<CustomField>
    <fullName>day_end__c</fullName>
    <label>day_end</label>
    <required>true</required>
    <type>Date</type>
</CustomField>