force-app/main/default/objects/Expo_Meeting_Booking_Info__c/fields/day_start__c.field-meta.xml
<CustomField>
    <fullName>day_start__c</fullName>
    <label>day_start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>