force-app/main/default/objects/Expo_Meeting_Booking_Info__c/fields/device__c.field-meta.xml
<CustomField>
    <fullName>device__c</fullName>
    <label>device</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>