force-app/main/default/objects/Expo_Meeting_Booking_Info__c/fields/Exhibition_Management__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Management__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Exhibition Management</label>
    <referenceTo>ExpoInfo__c</referenceTo>
    <relationshipName>Expo_Meeting_Booking_Infos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>