force-app/main/default/objects/Expo_Meeting_Booking_Info__c/fields/location__c.field-meta.xml
<CustomField>
    <fullName>location__c</fullName>
    <label>location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>