force-app/main/default/objects/Expo_Meeting_Booking_Info__c/fields/Max_Range__c.field-meta.xml
<CustomField>
    <fullName>Max_Range__c</fullName>
    <inlineHelpText>会议室允许预定的最大时间（分钟）</inlineHelpText>
    <label>Max Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>