force-app/main/default/objects/Expo_Meeting_Booking_Info__c/fields/time_end__c.field-meta.xml
<CustomField>
    <fullName>time_end__c</fullName>
    <label>time_end</label>
    <required>true</required>
    <type>Time</type>
</CustomField>