force-app/main/default/objects/Expo_Meeting_Booking_Info__c/fields/time_start__c.field-meta.xml
<CustomField>
    <fullName>time_start__c</fullName>
    <label>time_start</label>
    <required>true</required>
    <type>Time</type>
</CustomField>