force-app/main/default/objects/Expo_Meeting_Booking_Info__c/fields/whiteboard__c.field-meta.xml
<CustomField>
    <fullName>whiteboard__c</fullName>
    <label>whiteboard</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>