force-app/main/default/objects/Expo_Meeting_Booking_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>day_start__c</columns>
    <columns>day_end__c</columns>
    <columns>time_start__c</columns>
    <columns>time_end__c</columns>
    <columns>capacity__c</columns>
    <columns>device__c</columns>
    <columns>access__c</columns>
    <columns>location__c</columns>
    <columns>Exhibition_Management__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>