force-app/main/default/objects/Expo_Meeting_Booking_Info__c/listViews/X137_Canton_Fair.listView-meta.xml
<ListView>
    <fullName>X137_Canton_Fair</fullName>
    <columns>NAME</columns>
    <columns>capacity__c</columns>
    <columns>device__c</columns>
    <columns>day_start__c</columns>
    <columns>day_end__c</columns>
    <columns>Max_Range__c</columns>
    <columns>Exhibition_Management__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Management__c</field>
        <operation>contains</operation>
        <value>137</value>
    </filters>
    <label>137 Canton Fair</label>
</ListView>